fix(#262): 测试改用 Java 8 集合 API（CI package-smoke）
Map.of/Set.of 在 agent 模块 JDK8 目标下编不过。